update css to stop date wrapping at top right. hotfix

--- a/static/main.css
+++ b/static/main.css
@@ -3,6 +3,7 @@
 .small-text {
   font-weight: 200;
   font-size: 80%;
+  white-space: nowrap;
 }
 
 body {
